--- a/Enrollment.html
+++ b/Enrollment.html
@@ -8,6 +8,6 @@ img {
 </style>
 </head>
 <body>
-<img src="Enrollment.png" alt="Bill To Name" width="500" height="700">
+<img src="https://github.com/jlopezbilltrust/Sandbox/blob/main/Enrollment.png" alt="Bill To Name" width="500" height="700">
 </body>
 </html>
